# structural-analysis

./: .gitignore  ANEST.for  CMakeLists.txt  Elementos.for  Esforcos.for  Gauss.for  IA.FOR  Nos.for  Plotar.for  Port2d.for  PrepArq.for  README.md  Reacoes.for  Respostas.for  Rotacao.for  Sistema.for  Trel2d.for  makefile
examples/: exemplo  exemplo.SAI
